# Peri.dot

./: .gitignore  .gitmodules  .replit  Cargo.toml  LICENSE.txt  README.md  grammar.txt  main.py  main.sh  pyproject.toml  test.peri  testmodule.peri
peri.dot/: __init__.py  __main__.py
peri.dot/version/: constants.py  context.py  exceptions.py  interpreter.py  lexer.py  nodes.py  parser.py  tokens.py  types.py
peri.dot/version/modules/colorama/: ansi.py
peridot/: __main__.py
peridot/version/: catch.py  constants.py  context.py  default.py  exceptions.py  interpreter.py  lexer.py  nodes.py  parser.py  perimod.py  repl.py  run.py  tokens.py  types.py
peridot/version/modules/: datetime.py  file.py  os.py  periscope.py  sys.py
periscope/: __main__.py
periscope/version/: test.py
peritests/: arrays.peri  booleans.peri  builtinfunctions.peri  dictionaries.peri  exceptions.peri  floats.peri  functions.peri  ids.peri  integers.peri  namespaces.peri  nulltype.peri  strings.peri  tuples.peri
src/: main.rs  version.rs
src/version/: constants.rs  context.rs  exceptions.rs  interpreter.rs  lexer.rs  logger.rs  nodes.rs  parser.rs  run.rs  tokens.rs  types.rs
tests/: test_arithmetic.py  test_boolean.py  test_types_misc.py
