[tool.poetry]
name = "peridot"
version = "1.1.1"
description = "A strongly typed interpreted language, with type inference, implemented in Python."
authors = ["Totobird", "Snowkeep"]
license = 'BSD 3-Clause'
readme = 'README.md'
homepage = 'https://toto-bird.github.io/Peri.dot-lang'
repository = 'https://github.com/toto-bird/Peri.dot'
documentation = 'https://toto-bird.github.io/Peri.dot-lang/docs'

[tool.poetry.scripts]
peridot = 'peridot:main'
periscope = 'periscope:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "7.1.2"
colorama = "0.4.3"
xdgappdirs = "^1.4.5"
perimod = "^1.0.1"
pygments = "^2.6.1"
prompt_toolkit = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = "tests"

